syntax = "proto3";

// TODO 这个结构需要迁移到crypto/types.go中
message CertSignature {
    bytes signature = 1;
    bytes cert      = 2;
    bytes uid       = 3;
}
